Item page alignmetn fixes

--- a/src/main/webapp/app/item/item.scss
+++ b/src/main/webapp/app/item/item.scss
@@ -3,14 +3,22 @@ video {
   border-radius: 0.25rem;
 }
 .video-wrapper {
-  width: 35rem;
-  height: 30rem;
-  margin-left: 8rem;
+  // width: 35rem;
 }
 .card {
   margin-left: 5rem;
 }
-.video-desc {
-  margin-top: -6rem;
-  margin-left: 8rem;
+.section-title {
+  color:#43497b;
+  font-weight: bold;
+}
+.tag{
+  color: #7175d8;
+  padding: 3px
+}
+.tag:hover {
+  background: #7175d8;
+  color: #fff;
+  cursor: pionter;
+  margin: 3px;
 }
