--- a/src/main/webapp/content/scss/vendor.scss
+++ b/src/main/webapp/content/scss/vendor.scss
@@ -21,6 +21,9 @@ eg $input-color: red;
 .popover {
   border-radius: 0.25rem !important;
 }
+.img-thumbnail{
+  padding: 0.5rem!important;
+}
 strong {
   font-weight: bold !important;
 }
